--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prisma": "^6.10.1",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5"
   }
 }
