--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "seed": "ts-node src/scripts/seed.ts"
   },
+  "types": "module",
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@google/generative-ai": "^0.24.1",
