--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@google/generative-ai": "^0.24.1",
+    "@langchain/community": "^0.3.47",
+    "@langchain/google-genai": "^0.2.13",
     "@prisma/client": "^6.10.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -22,6 +24,7 @@
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "langchain": "^0.3.29",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
     "next-auth": "^5.0.0-beta.29",
